added methods allowing to reset the "own" boolean and integer type properties
git-svn-id: http://code.jaspersoft.com/svn/repos/jasperreports/trunk@28 76e25fc1-081a-0410-bb1b-c96bc70638b7